--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "dependencies": {
     "moment": "^2.10.6",
     "printf": "^0.2.3"
+  },
+  "devDependencies": {
+    "code": "^2.0.1",
+    "lab": "^7.2.0"
   }
 }
