chore(release): update package.json for commitizen

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "lab": "^7.2.0",
     "semantic-release": "^4.3.5"
   },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   },
   "repository": {
     "type": "git",
