--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "code": "^2.0.1",
     "commitizen": "^2.4.4",
     "cz-conventional-changelog": "^1.1.4",
+    "ghooks": "^0.3.2",
     "lab": "^7.2.0",
     "semantic-release": "^4.3.5"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "pre-commit": "npm run test"
     }
   },
   "repository": {
