--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "code": "^2.0.1",
     "commitizen": "^2.4.4",
     "cz-conventional-changelog": "^1.1.4",
+    "jshint": "^2.8.0",
     "lab": "^7.2.0",
     "semantic-release": "^4.3.5"
   },
